<resources>
    <string name="app_name" translatable="false">Adhell3</string>
    <string name="domain_rules_status">Domain rules are</string>
    <string name="domain_rules_enabled">Domain rules are enabled</string>
    <string name="domain_rules_disabled">Domain rules are disabled</string>
    <string name="domain_info">Blacklist: 0 domains | Whitelist: 0 domains and 0 apps</string>
    <string name="domain_info_placeholder">Blacklist: %1$d domains | Whitelist: %2$d domains and %3$d apps</string>
    <string name="firewall_rules_status">Firewall rules are</string>
    <string name="firewall_rules_enabled">Firewall rules are enabled</string>
    <string name="firewall_rules_disabled">Firewall rules are disabled</string>
    <string name="firewall_rules_info">Mobile data: 0 apps | Wi-Fi data: 0 apps | Custom: 0 apps</string>
    <string name="firewall_rules_info_placeholder">Mobile data: %1$d apps | Wi-Fi data: %2$d apps | Custom: %3$d apps</string>
    <string name="app_disabler_status">App disabler is</string>
    <string name="app_disabler_enabled">App disabler is enabled</string>
    <string name="app_disabler_disabled">App disabler is disabled</string>
    <string name="app_disabler_info">0 apps are disabled</string>
    <string name="app_disabler_info_placeholder">%1$d apps are disabled</string>
    <string name="app_component_status">App components are</string>
    <string name="app_component_enabled">App components are enabled</string>
    <string name="app_component_disabled">App components are disabled</string>
    <string name="app_component_toggle_info">0 permissions, 0 services, 0 receivers,</string>
    <string name="app_component_toggle_info_placeholder">%1$d permissions, %2$d services, %3$d receivers,</string>
    <string name="app_component_toggle_info2">0 activities and 0 providers are disabled</string>
    <string name="app_component_toggle_info_placeholder2">%1$d activities and %2$d providers are disabled</string>
    <string name="adhell_not_supported">Adhell3 is not yet supported on your device.</string>
    <string name="license_key">KPE license key</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="change_license">Change License</string>
    <string name="activate_license">Activate License</string>
    <string name="deactivate_license">Deactivate License</string>
    <string name="license_activated">License Activated</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="admin_enabled">Admin Enabled</string>
    <string name="no_internet_connection">Your device is not connected to the Internet.</string>
    <string name="activating_knox_license">Activating…</string>
    <string name="deactivating_knox_license">Deactivating…</string>
    <string name="block_button_text_turn_off">Turn Off</string>
    <string name="block_button_text_turn_on">Turn On</string>
    <string name="whitelist_info">
        Whitelist domains to bypass the firewall.
        \nToggle Domain rules to apply changes.
    </string>
    <string name="delete_app">Disable and delete adhell3</string>
    <string name="delete_app_summary">Disable all features and uninstall adhell3</string>
    <string name="delete_app_dialog_title">Delete adhell3</string>
    <string name="delete_app_dialog_text">Do you really want to uninstall adhell3 and enable all disabled apps?</string>
    <string name="dns_1_address">DNS 1 Address</string>
    <string name="dns_2_address">DNS 2 Address</string>
    <string name="set_dns_button_text">Set DNS</string>
    <string name="dns_info">
        Edit DNS only if you know the issues it can cause.
        \nToggle Domain rules to apply changes.
    </string>
    <string name="dump_domains_title">Dump Domains In Database</string>
    <string name="export_domains_title">Export Unique Domains</string>
    <string name="blacklist_info">
        Blacklist domains.
        \nToggle Domain rules to apply domain changes.
    </string>
    <string name="dialog_blacklist_domain_title">Add Domain</string>
    <string name="dialog_blacklist_domain_info">Domain rule support wildcards: *facebook.com</string>
    <string name="firewall_info">
        Firewall rules.
        \nToggle Firewall rules to apply firewall changes.
    </string>
    <string name="dialog_firewall_rule_title">Add Firewall Rule</string>
    <string name="dialog_firewall_rule_info">
        Firewall rule format for allow, deny and redirect exception:
        \npackageName|ipAddress|port|mode
        \nMode is single letter from: (A)llow, (D)eny, redirect_(E)xception
        \n
        \nBlock port 53 for every IP in Chrome:
        \ncom.android.chrome|*|53|D
        \nAllow port 53 for every IP for every app:
        \n*|*|53|A
        \nExclude Chrome HTTP redirect (from example below):
        \ncom.android.chrome|*|80|E
        \n
        \nFor redirect format is:
        \npackageName|sourceIpAddress:port|targetIpAddress:port|mode
        \n
        \nRedirect all HTTP traffic to localhost on port 8000:
        \n*|*:80|127.0.0.1:8000|R
        \n
        \nRedirect and redirect_exception only accepts ipv4
        \nAllow rule always has higher priority than deny
    </string>
    <string name="dialog_whitelist_domain_title">Add Domain</string>
    <string name="dialog_whitelist_domain_info">
        Domain rule support wildcards: *facebook.com
        \n
        \nDomain rule format for a specific app:
        \npackageName|domain
    </string>
    <string name="dialog_add_remote_provider_title">Add Remote Provider</string>
    <string name="dialog_add_hosts_file_title">Add Hosts File</string>
    <string name="dialog_add_hosts_file_info">
        Adding hosts file from a cloud storage will require cloud provider app.
        \nTo access cloud providers click on "three short lines" on the top left corner of the file picker.
        \nTo refresh the hosts file from cloud storage, files in the cloud provider app must be refreshed first.
    </string>
    <string name="dialog_enable_components_title">Enable All Components</string>
    <string name="dialog_enable_components_info">
        This will enable all apps\' components.
        \nSamsung Knox doesn\'t have an API to clear disabled components.
        \nTherefore, if they are still disabled after this operation, you need to uninstall adhell3 to enable them.
        \n\nDo you really want to enable all apps\' components?
    </string>
    <string name="dialog_system_app_components_title">System apps are listed</string>
    <string name="dialog_system_app_components_info">Beware when disabling SYSTEM apps\' components. You might end up with a factory reset!</string>
    <string name="last_day_blocked">Domains blocked in past %1$d hours: %2$d</string>
    <string name="provider_info">
        In addition to adhell3\'s standard package, you can add links to remote and local hosts lists.
        \nAdhell3 can block up to %1$d unique domains.
        \nToggle Domain rules to apply changes.
    </string>
    <string name="total_unique_domains">Total unique domains: %1$d</string>
    <string name="restrictions_fragment_title">Restrictions</string>
    <string name="google_category">Google</string>
    <string name="allow_google_sync">Allow Google Account Sync</string>
    <string name="allow_google_sync_summary">Allow or disallow auto sync for Google accounts.</string>
    <string name="allow_google_crash">Allow Google Crash Report</string>
    <string name="allow_google_crash_summary">Allow or disallow sending a crash report to Google.</string>
    <string name="allow_google_backup">Allow Google Backup</string>
    <string name="allow_google_backup_summary">Allow or disallow backing up to Google servers.</string>
    <string name="allow_non_market_app">Allow Non Market Apps</string>
    <string name="allow_non_market_app_summary">Allow or disallow installation of non-Google-Play applications.</string>
    <string name="hardware_category">Hardware</string>
    <string name="allow_camera">Allow Camera</string>
    <string name="allow_camera_summary">Allow or disallow the camera. Other applications that use the camera cannot use it. It disables the photo camera, video camera, and video telephony functionality.</string>
    <string name="allow_microphone">Allow Microphone</string>
    <string name="allow_microphone_summary">Allow or disallow microphone. It disables only the microphone used for recording, not the phone application microphone.</string>
    <string name="allow_audio_record">Allow Audio Recording</string>
    <string name="allow_audio_record_summary">Allow or disallow audio recording. The device microphone is still available after disabling audio recording so that the user can make calls and use audio streaming. Video recording is still allowed if no audio recording is attempted.</string>
    <string name="allow_video_record">Allow Video Recording</string>
    <string name="allow_video_record_summary">Allow or disallow video recording. The device camera is still available after disabling video recording so that user can take pictures and use video streaming.</string>
    <string name="allow_usb_host">Allow USB Host Storage</string>
    <string name="allow_usb_host_summary">Allow or disallow the usage of USB host storage via USB OTG.</string>
    <string name="connections_category">Connections</string>
    <string name="allow_mobile_data">Allow Mobile Data</string>
    <string name="allow_mobile_data_summary">Allow or disallow mobile data connections.</string>
    <string name="allow_wifi_access">Allow Wi-Fi Access</string>
    <string name="allow_wifi_access_summary">Allow or disallow Wi-Fi access. Wi-Fi Direct and S-Beam features which depend on this policy will also be affected by this setting. Even with disabled Wifi access, Wifi scanning is still possible.</string>
    <string name="allow_bluetooth">Allow Bluetooth</string>
    <string name="allow_bluetooth_summary">Allow or disallow Bluetooth access. User or third-party applications cannot enable Bluetooth access once it is disabled. Even with disabled Bluetooth access, BLE scanning is still possible.</string>
    <string name="allow_tethering">Allow Tethering</string>
    <string name="allow_tethering_summary">Allow or disallow the device from sharing its carrier data with another device through USB, WiFi, and Bluetooth.</string>
    <string name="miscellaneous_category">Miscellaneous</string>
    <string name="allow_clipboard">Allow Clipboard</string>
    <string name="allow_clipboard_summary">Allow or disallow any editing functions that require access to the clipboard, including cut, copy, and paste operations.</string>
    <string name="allow_clipboard_share">Allow Clipboard Share</string>
    <string name="allow_clipboard_share_summary">Allow or disallow sharing the clipboard between applications.</string>
    <string name="allow_screen_capture">Allow Screen Capture</string>
    <string name="allow_screen_capture_summary">Allow or disallow a user from taking screenshots of the device screen.</string>
    <string name="create_logcat_title">Create logcat</string>
    <string name="dialog_license_info">
        Adhell3 utilizes Knox SDK which requires a KPE key.
        \nKPE Development Limited cannot be used as it doesn\'t have needed permissions.
    </string>
    <string name="shizuku_dialog_title">Grant Device Owner</string>
    <string name="shizuku_dialog_summary">Grant Device Owner using Shizuku to allow usage of restricted features on Android 15 and later.
        \n<b>Before proceeding read explanation under</b>
        \n<a href="https://gitlab.com/fusionjack/adhell3/-/blob/master/device_owner.md">https://gitlab.com/fusionjack/adhell3/-/blob/master/device_owner.md</a>
    </string>
    <string name="shizuku_dialog_open_accounts">Open Accounts Settings</string>
    <string name="do_transfer">Transfer Device Owner</string>
</resources>