<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/providerInfoTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/provider_info"
        android:background="@drawable/border" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/providerInfoTextView"
        android:padding="10dp"
        android:text="@string/total_unique_domains"
        android:background="@drawable/border"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/providerSwipeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/infoTextView">

        <ListView
            android:id="@+id/providerListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <toan.android.floatingactionmenu.FloatingActionsMenu
        android:id="@+id/provider_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        fab:fab_menuIcon="@drawable/ic_plus"
        fab:fab_addButtonColorNormal="@color/colorFab"
        fab:fab_addButtonColorPressed="@color/colorFab"
        fab:fab_labelStyle="@style/menu_labels_style"
        fab:fab_labelsPosition="right"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp">

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/action_add_remote_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_remote_provider"
            fab:fab_colorNormal="@color/colorFab"
            fab:fab_colorPressed="@color/colorFab"
            fab:fab_title="@string/dialog_add_remote_provider_title"/>

        <toan.android.floatingactionmenu.FloatingActionButton
            android:id="@+id/action_add_local_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/ic_local_provider"
            fab:fab_colorNormal="@color/colorFab"
            fab:fab_colorPressed="@color/colorFab"
            fab:fab_title="@string/dialog_add_local_provider_title"/>

    </toan.android.floatingactionmenu.FloatingActionsMenu>

</RelativeLayout>