<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:showDividers="middle">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/home_status_title"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:paddingBottom="2dp"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_home"
            android:padding="4dp">

            <TextView
                android:id="@+id/domainStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/domain_rules_enabled"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/domainInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/domainStatusTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:layout_toStartOf="@id/domainRulesSwitch"
                android:text="@string/domain_rules_info"
                android:textSize="11sp" />

            <Switch
                android:id="@+id/domainRulesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_home"
            android:padding="4dp">

            <TextView
                android:id="@+id/firewallStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/firewall_rules_enabled"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firewallInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firewallStatusTextView"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:layout_toStartOf="@id/firewallRulesSwitch"
                android:text="@string/firewall_rules_info"
                android:textSize="11sp" />

            <Switch
                android:id="@+id/firewallRulesSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingEnd="4dp"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/appDisablerLayout"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_home"
            android:padding="4dp">

            <TextView
                android:id="@+id/disablerStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/app_disabler_enabled"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/disablerInfoTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disablerStatusTextView"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_toStartOf="@id/appDisablerSwitch"
                android:text="@string/app_disabler_info"
                android:gravity="center_vertical"
                android:textSize="11sp" />

            <Switch
                android:id="@+id/appDisablerSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/appComponentLayout"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/border_home"
            android:padding="4dp">

            <TextView
                android:id="@+id/appComponentStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal"
                android:text="@string/app_component_enabled"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/appComponentInfoTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appComponentStatusTextView"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:layout_toStartOf="@id/appComponentSwitch"
                android:text="@string/app_component_toggle_info"
                android:textSize="11sp" />

            <Switch
                android:id="@+id/appComponentSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false" />

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/border">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="8dp"
            android:text="@string/last_day_blocked"
            android:textAlignment="center" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoTextView">

            <ExpandableListView
                android:id="@+id/blockedDomainsListView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ProgressBar
            android:id="@+id/loadingBar"
            android:layout_width="75dp"
            android:layout_height="75dp"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/loading_animated"
            android:visibility="visible" />

        <com.leinardi.android.speeddial.SpeedDialView
            android:id="@+id/domain_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-4dp"
            android:paddingBottom="5dp"
            app:layout_behavior="@string/speeddial_scrolling_view_snackbar_behavior"
            app:sdMainFabClosedSrc="@drawable/ic_add"
            app:sdMainFabClosedIconColor="@android:color/white"
            app:sdMainFabOpenedIconColor="@android:color/white" />

    </RelativeLayout>
</LinearLayout>